// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test that all components are rendering just fine. Quote page renders correctly 1`] = `
<div
  className="quote-container"
>
  <h3>
    Mathematics is not about numbers, equations, computations, or algorithms: it is about understanding. - William Paul Thurston
  </h3>
</div>
`;

exports[`Test that all components are rendering just fine. Render the CalcButton. 1`] = `
<button
  className="calc-buttons"
  onClick={[Function]}
  type="button"
>
  test
</button>
`;

exports[`Test that all components are rendering just fine. Render the Calculator 1`] = `
<div
  className="calc-body"
>
  <div
    className="calc-screen"
  >
    0
  </div>
  <div
    className="keyboard"
  >
    <div
      className="key-digits"
    >
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        AC
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        +/-
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        %
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        7
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        8
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        9
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        4
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        5
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        6
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        1
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        2
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        3
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        0
      </button>
      <div
        className="key-dot"
      >
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          .
        </button>
      </div>
    </div>
    <div
      className="operators"
    >
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        ÷
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        x
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        -
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        +
      </button>
      <button
        className="calc-buttons"
        onClick={[Function]}
        type="button"
      >
        =
      </button>
    </div>
  </div>
</div>
`;

exports[`Test that all components are rendering just fine. Render the CalculatorPage. 1`] = `
<div
  className="calculator"
>
  <h2>
    Let's do some math!
  </h2>
  <div
    className="calc-body"
  >
    <div
      className="calc-screen"
    >
      0
    </div>
    <div
      className="keyboard"
    >
      <div
        className="key-digits"
      >
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          AC
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          +/-
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          %
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          7
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          8
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          9
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          4
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          5
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          6
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          1
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          2
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          3
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          0
        </button>
        <div
          className="key-dot"
        >
          <button
            className="calc-buttons"
            onClick={[Function]}
            type="button"
          >
            .
          </button>
        </div>
      </div>
      <div
        className="operators"
      >
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          ÷
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          x
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          -
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          +
        </button>
        <button
          className="calc-buttons"
          onClick={[Function]}
          type="button"
        >
          =
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test that all components are rendering just fine. Render the Home page. 1`] = `
<section>
  <h2>
    Welcome to our page!
  </h2>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
</section>
`;

exports[`Test that all components are rendering just fine. Render the Nav 1`] = `
<div
  className="nav-component"
>
  <h1>
    Math Magicians
  </h1>
  <nav
    className="nav"
  >
    <ul
      className="nav-list"
    >
      <li
        className="nav-items"
      >
        <a
          aria-current="page"
          className="active-link"
          href="/"
          onClick={[Function]}
          style={Object {}}
        >
          Home
        </a>
        <span
          className="divider"
        >
           | 
        </span>
      </li>
      <li
        className="nav-items"
      >
        <a
          aria-current={null}
          href="/calculator"
          onClick={[Function]}
        >
          Calculator
        </a>
        <span
          className="divider"
        >
           | 
        </span>
      </li>
      <li
        className="nav-items"
      >
        <a
          aria-current={null}
          href="/quote"
          onClick={[Function]}
        >
          Quote
        </a>
        <span
          className="divider"
        >
           | 
        </span>
      </li>
    </ul>
  </nav>
</div>
`;
